tests/source1/fail/runtime_typecheck9.js
display(!1);
//error: "boo type mismatch"